@@ -7,6 +7,9 @@ huku <huku@grhack.net>
 WIP Python extension that uses Intel's XED2 library to decode x86 instructions.
 Currently, it can only print decoded instructions in Intel format.
 
+**pyxed** is designed to be a wrapper around XED's C API and, as such, it
+doesn't provide any high level abstractions.
+
 This project, which is actually my first attempt to develop a useful Python
 extension, is in its very early stages of development, so, expect things to
 change in the near future. If your compiler throws a warning, if you happen
@@ -24,5 +27,5 @@ For information on how to use **pyxed**, have a look at **test.py**.
 ```
 $ python test.py e90000000090
 10001000 jmp 0x10001005
-10001005 nop 
+10001005 nop
 ```
