@@ -1,6 +1,12 @@
+/* pyxed - Python bindings for Intel's XED2
+ * huku <huku@grhack.net>
+ *
+ * pyxed.c - Holds the extension's entry point.
+ */
 #include "includes.h"
 #include "xed.h"
 #include "instruction.h"
+#include "operand.h"
 
 
 static PyMethodDef methods[] =
@@ -12,7 +18,7 @@ static PyMethodDef methods[] =
 /* Register several XED related constants in the module's global scope. */
 static void register_constants(PyObject *module)
 {
-    unsigned int i;
+    int i;
     const char *name;
     char full_name[BUFSIZ];
 
@@ -28,22 +34,30 @@ static void register_constants(PyObject *module)
     PyModule_AddObject(module, "XED_ADDRESS_WIDTH_LAST",
         PyInt_FromLong(XED_ADDRESS_WIDTH_LAST));
 
-    /* It's not always legal to treat enumerations as unsigned integers,
-     * however, this is what XED does internally. We rely on the fact that
-     * the following enumerations start at 0 and their elements increment by 1.
+
+    /* "The identifiers in an enumerator list are declared as constants that
+     *  have type `int' and may appear wherever such are permitted."
+     *  -- N1570 6.7.2.2
      */
 
     /* Constants from "xed-machine-mode-enum.h". */
-    for(i = UINT(XED_MACHINE_MODE_INVALID);
-            i < UINT(XED_MACHINE_MODE_LAST) + 1; i++)
+    for(i = XED_MACHINE_MODE_INVALID; i <= XED_MACHINE_MODE_LAST; i++)
     {
         name = xed_machine_mode_enum_t2str((xed_machine_mode_enum_t)i);
         snprintf(full_name, sizeof(full_name), "XED_MACHINE_MODE_%s", name);
         PyModule_AddObject(module, full_name, PyInt_FromLong(i));
     }
 
+    /* Constants from "xed-iform-enum.h". */
+    for(i = XED_IFORM_INVALID; i <= XED_IFORM_LAST; i++)
+    {
+        name = xed_iform_enum_t2str((xed_iform_enum_t)i);
+        snprintf(full_name, sizeof(full_name), "XED_IFORM_%s", name);
+        PyModule_AddObject(module, full_name, PyInt_FromLong(i));
+    }
+
     /* Constants from "xed-iclass-enum.h". */
-    for(i = UINT(XED_ICLASS_INVALID); i < UINT(XED_ICLASS_LAST) + 1; i++)
+    for(i = XED_ICLASS_INVALID; i <= XED_ICLASS_LAST; i++)
     {
         name = xed_iclass_enum_t2str((xed_iclass_enum_t)i);
         snprintf(full_name, sizeof(full_name), "XED_ICLASS_%s", name);
@@ -51,7 +65,7 @@ static void register_constants(PyObject *module)
     }
 
     /* Constants from "xed-category-enum.h". */
-    for(i = UINT(XED_CATEGORY_INVALID) + 1; i < UINT(XED_CATEGORY_LAST); i++)
+    for(i = XED_CATEGORY_INVALID; i <= XED_CATEGORY_LAST; i++)
     {
         name = xed_category_enum_t2str((xed_category_enum_t)i);
         snprintf(full_name, sizeof(full_name), "XED_CATEGORY_%s", name);
@@ -59,7 +73,7 @@ static void register_constants(PyObject *module)
     }
 
     /* Constants from "xed-extension-enum.h". */
-    for(i = UINT(XED_EXTENSION_INVALID) + 1; i < UINT(XED_EXTENSION_LAST); i++)
+    for(i = XED_EXTENSION_INVALID; i <= XED_EXTENSION_LAST; i++)
     {
         name = xed_extension_enum_t2str((xed_extension_enum_t)i);
         snprintf(full_name, sizeof(full_name), "XED_EXTENSION_%s", name);
@@ -67,7 +81,7 @@ static void register_constants(PyObject *module)
     }
 
     /* Constants from "xed-isa-set-enum.h". */
-    for(i = UINT(XED_ISA_SET_INVALID) + 1; i < UINT(XED_ISA_SET_LAST); i++)
+    for(i = XED_ISA_SET_INVALID; i <= XED_ISA_SET_LAST; i++)
     {
         name = xed_isa_set_enum_t2str((xed_isa_set_enum_t)i);
         snprintf(full_name, sizeof(full_name), "XED_ISA_SET_%s", name);
@@ -75,8 +89,7 @@ static void register_constants(PyObject *module)
     }
 
     /* Constants from "xed-operand-action-enum.h". */
-    for(i = UINT(XED_OPERAND_ACTION_INVALID) + 1;
-            i < UINT(XED_OPERAND_ACTION_LAST); i++)
+    for(i = XED_OPERAND_ACTION_INVALID; i <= XED_OPERAND_ACTION_LAST; i++)
     {
         name = xed_operand_action_enum_t2str((xed_operand_action_enum_t)i);
         snprintf(full_name, sizeof(full_name), "XED_OPERAND_ACTION_%s", name);
@@ -95,7 +108,8 @@ PyMODINIT_FUNC initpyxed(void)
     /* Make XED objects visible to Python. */
     module = Py_InitModule("pyxed", methods);
     register_constants(module);
-    register_xed_object(module);
+    register_operand_object(module);
     register_instruction_object(module);
+    register_xed_object(module);
 }
 
